# hw-27

./: db.sqlite3  pyproject.toml  pytests.ini  requirements.txt
ads/: ad_urls.py  admin.py  cat_urls.py  models.py  permissions.py  sel_urls.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
ads/migrations/: 0001_initial.py  0002_selection.py  0003_rename_category_id_ad_category_alter_ad_name_and_more.py  0004_alter_ad_name_alter_category_name_and_more.py  0005_alter_ad_name.py  0006_category_slug_alter_ad_name_alter_ad_price.py  0007_alter_ad_name.py
ads_2/: ad_urls.py  admin.py  apps.py  cat_urls.py  models.py  permissions.py  sel_urls.py  serializers.py  views.py
ads_2/migrations/: 0001_initial.py  0002_selection.py  0003_rename_category_id_ad_category_alter_ad_name_and_more.py  0004_alter_ad_name_alter_category_name_and_more.py  0005_alter_ad_name.py
avito/: settings.py  urls.py  wsgi.py
tests/: factories.py  fixtures.py
tests/ads/: test_ads_create.py  test_ads_detail.py  test_ads_list.py
tests/selections/: test_selections_create.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_email_and_more.py  0003_user_birth_date_alter_user_email.py
